--- a/01.java/step11_web/src/main/webapp/WEB-INF/web.xml
+++ b/01.java/step11_web/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>step11_Servletfail___</display-name>
+  <display-name>step11_web</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  <!-- 사용자 정의 servlet url  매핑 -->
   <servlet>
-    <servlet-name>a</servlet-name>
-    <servlet-class>step01.FirstServlet</servlet-class>
+  	<servlet-name>test</servlet-name>
+  	<servlet-class>step01.FirstServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>a</servlet-name>
-    <url-pattern>/fisa</url-pattern>
+  	<servlet-name>test</servlet-name>
+  	<url-pattern>/fisa</url-pattern>
   </servlet-mapping>
 </web-app>
