--- a/01.java/step11_web/src/main/webapp/WEB-INF/web.xml
+++ b/01.java/step11_web/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,14 @@
   	<servlet-name>test</servlet-name>
   	<url-pattern>/fisa</url-pattern>
   </servlet-mapping>
+  
+  
+  <servlet>
+  	<servlet-name>login</servlet-name>
+  	<servlet-class>step01.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>login</servlet-name>
+  	<url-pattern>/login</url-pattern>
+  </servlet-mapping>
 </web-app>
