--- a/01.java/step11_web/src/main/webapp/WEB-INF/web.xml
+++ b/01.java/step11_web/src/main/webapp/WEB-INF/web.xml
@@ -4,42 +4,46 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
-  <!-- 사용자 정의 servlet url  매핑 -->
   <servlet>
-  	<servlet-name>test</servlet-name>
-  	<servlet-class>step01.FirstServlet</servlet-class>
+    <servlet-name>test</servlet-name>
+    <servlet-class>step01.FirstServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>test</servlet-name>
-  	<url-pattern>/fisa</url-pattern>
+    <servlet-name>test</servlet-name>
+    <url-pattern>/fisa</url-pattern>
   </servlet-mapping>
-  
-  
   <servlet>
-  	<servlet-name>login</servlet-name>
-  	<servlet-class>step01.LoginServlet</servlet-class>
+    <servlet-name>login</servlet-name>
+    <servlet-class>step01.LoginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>login</servlet-name>
-  	<url-pattern>/login</url-pattern>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/login</url-pattern>
   </servlet-mapping>
-  
   <servlet>
-  	<servlet-name>one</servlet-name>
-  	<servlet-class>step02.pagemove.One</servlet-class>
+    <servlet-name>one</servlet-name>
+    <servlet-class>step02.pagemove.One</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>one</servlet-name>
-  	<url-pattern>/one</url-pattern>
+    <servlet-name>one</servlet-name>
+    <url-pattern>/one</url-pattern>
   </servlet-mapping>
-  
   <servlet>
-  	<servlet-name>two</servlet-name>
-  	<servlet-class>step02.pagemove.Two</servlet-class>
+    <servlet-name>two</servlet-name>
+    <servlet-class>step02.pagemove.Two</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>two</servlet-name>
-  	<url-pattern>/two</url-pattern>
+    <servlet-name>two</servlet-name>
+    <url-pattern>/two</url-pattern>
   </servlet-mapping>
-  
+  <servlet>
+    <description></description>
+    <display-name>Logout</display-name>
+    <servlet-name>Logout</servlet-name>
+    <servlet-class>step03.pagemove.test.Logout</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Logout</servlet-name>
+    <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
 </web-app>
