--- a/01.java/step15_guestBookSpringT1/build.gradle
+++ b/01.java/step15_guestBookSpringT1/build.gradle
@@ -24,21 +24,24 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	
-	//jsp 사용을 위한 추가 설정
-	// https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-jasper
+
+	//순수 JDBC와 jsp 사용을 위한 추가 설정
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+		
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	// https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
-	compileOnly 'jakarta.servlet:jakarta.servlet-api'
-	// https://mvnrepository.com/artifact/jakarta.servlet.jsp.jstl/jakarta.servlet.jsp.jstl-api
-	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
 	
+	implementation 'jakarta.servlet:jakarta.servlet-api' //스프링부트 3.0 이상
+	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api' //스프링부트 3.0 이상
+	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //스프링부트 3.0 이상
+   
 }
 
 tasks.named('test') {
