--- a/01.java/step16_AOP/src/main/resources/log4j.properties
+++ b/01.java/step16_AOP/src/main/resources/log4j.properties
@@ -1,30 +1,23 @@
-# Set the root logger level and appenders
-status = error
-name = PropertiesConfig
+# \uB8E8\uD2B8 \uB85C\uAC70 \uC124\uC815
+log4j.rootCategory=info, file, CONSOLE
 
-# Console appender
-appender.console.type = Console
-appender.console.name = STDOUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{ISO8601} [%t] %-5p %c{1} - %m%n
+# \uCF58\uC194 \uCD9C\uB825\uC744 \uC704\uD55C Appender \uC124\uC815
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%m%n
 
-# File appender
-appender.file.type = File
-appender.file.name = LOGFILE
-appender.file.fileName = C:/01.lab/00.log/weblog.log
-appender.file.layout.type = PatternLayout
-appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-appender.file.policies.type = Policies
-appender.file.policies.size.type = SizeBasedTriggeringPolicy
-appender.file.policies.size.size = 10MB
+# \uD30C\uC77C \uCD9C\uB825\uC744 \uC704\uD55C Appender \uC124\uC815
+log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.File=C:\\01.lab\\00.log\\weblog.log
+log4j.appender.file.Append=true
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-# Loggers
-logger.app.name = com.ce.fisa
-logger.app.level = info
-logger.app.appenderRef.console.ref = STDOUT
-logger.app.appenderRef.file.ref = LOGFILE
+# AOP \uAD00\uB828 \uB85C\uADF8 \uB808\uBCA8 \uC124\uC815
+log4j.logger.org.springframework.aop=debug
+log4j.logger.org.springframework.transaction=debug
+log4j.logger.org.aspectj.lang=debug
 
-# Root logger
-rootLogger.level = info
-rootLogger.appenderRef.console.ref = STDOUT
-rootLogger.appenderRef.file.ref = LOGFILE
+# Hibernate\uC640 JPA \uAD00\uB828 \uB85C\uADF8 \uBE44\uD65C\uC131\uD654
+log4j.logger.org.hibernate=OFF
+log4j.loggerjavax.persistence=OFF
